[metadata]
name = rtshell-shellsupport

[options]
packages = find_namespace:

[options.entry_points]
distutils.commands =
    build_shell_support = custom.build:BuildShellSupport
    install_shell_support = custom.build:InstallShellSupport
    build_documentation = custom.build:BuildDocumentation
    install_documentation = custom.build:InstallDocumentation
    install = custom.build:CustomInstall

